fix z index ordering and fix some bugs in css and z index and work on overlay component update library to version 1.0.89

--- a/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
+++ b/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
@@ -1,7 +1,7 @@
 ﻿@using Enter.Ui.Components.Button
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 @namespace Enter.Ui.Components
 <div @attributes="@AdditionalAttributes" class="@ClassNames">
     @if (ShowBack)
