--- a/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
+++ b/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
@@ -4,7 +4,7 @@
 @using Enter.Ui.Cores.Contracts
 @using Enter.Ui.Cores.Core
 @using Microsoft.JSInterop
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <EntAnimator @attributes="@AdditionalAttributes"
              @ref="Reference"
