--- a/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
@@ -3,7 +3,7 @@
 @typeparam TValue;
 @using System.Linq.Expressions
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@Id">
     @if (Label != null)
