--- a/Source/Enter.Ui/Components/List/EntListItem.razor
+++ b/Source/Enter.Ui/Components/List/EntListItem.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <li @attributes="@AdditionalAttributes" class="@ClassNames">
 
     @ChildContent
