--- a/Source/Enter.Ui/Components/Loading/EntLinearLoading.razor
+++ b/Source/Enter.Ui/Components/Loading/EntLinearLoading.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Loading
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <span @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames">
     @if (Indeterminate)
     {
