--- a/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 @using Enter.Ui.Components.Text
 @using Enter.Ui.Components.Button
 @using Enter.Ui.Cores.Core
