--- a/Source/Enter.Ui/Components/Modal/EntModal.razor
+++ b/Source/Enter.Ui/Components/Modal/EntModal.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <CascadingValue Value="this" IsFixed="true">
     <div  @ref="_modalReference" class="ent-modal-container" @onclick="OnContainerClick">
