--- a/Source/Enter.Ui/Components/Modal/EntModalProvider.razor
+++ b/Source/Enter.Ui/Components/Modal/EntModalProvider.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Modal
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <div class="ent-modal-provider ">
     <CascadingValue Value="this" IsFixed="true">
