--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuTextItem.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuTextItem.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <div @attributes="AdditionalAttributes" class="@ClassNames" @onclick="() => Click.InvokeAsync()">
     <EntIcon class="@IconClassNames" Icon="@Icon"/>
     <span class="@ContentClassNames">@Text</span>
