--- a/Source/Enter.Ui/Components/Pagination/EntPagination.razor
+++ b/Source/Enter.Ui/Components/Pagination/EntPagination.razor
@@ -3,7 +3,7 @@
 @using System.Diagnostics.CodeAnalysis
 @using Enter.Ui.Cores.Core
 @using Enter.Ui.Cores.Enums
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 
 <ul @attributes="@AdditionalAttributes" class="@ClassNames">
