--- a/Source/Enter.Ui/Components/Popover/EntPopover.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopover.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Cores.Enums
 @using Enter.Ui.Cores.Extensions
 @using Enter.Ui.Cores.Contracts
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@($"ent-popover-{_id}")">
 
