--- a/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Cores.Core
 @using Enter.Ui.Cores.Contracts
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <div class="@ClassNames">
     @foreach (var item in _entPopoverService.PopoverInstances)
     {
