--- a/Source/Enter.Ui/Components/Tabs/EntTabPanel.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntTabPanel.razor
@@ -1,4 +1,4 @@
-﻿@inherits Enter.Ui.Bases.EntComponentComponent
+﻿@inherits Enter.Ui.Bases.EntBaseComponent
 @namespace Enter.Ui.Components
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames">
