--- a/Source/Enter.Ui/Components/Text/EntText.razor
+++ b/Source/Enter.Ui/Components/Text/EntText.razor
@@ -1,6 +1,6 @@
 @namespace Enter.Ui.Components
 @using Enter.Ui.Components.Text
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 @switch (Type)
 {
