--- a/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
@@ -3,7 +3,7 @@
 @typeparam TValue
 @using Enter.Ui.Components.TreeView
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 
 <CascadingValue Value="this" IsFixed="true">
