--- a/Source/Enter.Ui/Components/UploadBox/EntUploadBox.razor
+++ b/Source/Enter.Ui/Components/UploadBox/EntUploadBox.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <div
     @attributes="@AdditionalAttributes"
