--- a/Source/Enter.Ui/Components/Utilities/Flex/EntFlex.razor
+++ b/Source/Enter.Ui/Components/Utilities/Flex/EntFlex.razor
@@ -2,7 +2,7 @@
 <div class="@ClassNames">@ChildContent</div>
 @using Enter.Ui.Components.Flex
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 @code {
     private readonly string _flexRow = "flex-row";
