--- a/Source/Enter.Ui/Components/Utilities/Space/EntSpace.razor
+++ b/Source/Enter.Ui/Components/Utilities/Space/EntSpace.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 <div @attributes="AdditionalAttributes" class="@ClassNames">@ChildContent</div>
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 @code {
     private readonly string _flexRow = "flex-row";
