--- a/Source/Enter.Ui/Styles/themes/_light.theme.scss
+++ b/Source/Enter.Ui/Styles/themes/_light.theme.scss
@@ -135,9 +135,15 @@
   --ent-body-line-height: 1.5;
 
   //z-index
-  --ent-z-index-top: 100;
-  --ent-z-index-secondary: 50;
-  --ent-z-index-tertiary: 30;
-  --ent-z-index-emphasis: 10;
+  --ent-z-index-1: 10;
+  --ent-z-index-2: 20;
+  --ent-z-index-3: 30;
+  --ent-z-index-4: 40;
+  --ent-z-index-5: 50;
+  --ent-z-index-6: 60;
+  --ent-z-index-7: 70;
+  --ent-z-index-8: 80;
+  --ent-z-index-9: 90;
+  --ent-z-index-10: 100;
 
 }
