--- a/Source/Enter.Ui/Components/Buttons/EntButton.razor
+++ b/Source/Enter.Ui/Components/Buttons/EntButton.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Components.Button
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <button @attributes="@AdditionalAttributes" disabled="@(Disabled ? true : false)" class="@ClassNames">
     @if (Icon != null && !Loading)
