--- a/Source/Enter.Ui/Components/Toolbar/EntToolbar.razor
+++ b/Source/Enter.Ui/Components/Toolbar/EntToolbar.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <CascadingValue Value="@(this)">
     <div @attributes="AdditionalAttributes" class="@ClassNames">
         @ChildContent
