--- a/Source/Enter.Ui/Components/Toolbar/EntToolbarButton.razor
+++ b/Source/Enter.Ui/Components/Toolbar/EntToolbarButton.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Components.Text
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 <CascadingValue Value="@(this)">
     <div @attributes="AdditionalAttributes" class="@ClassNames">
         @if (Icon != null && !Loading)
