--- a/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
@@ -2,7 +2,7 @@
 @typeparam TValue
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Cores.Core
-@inherits Enter.Ui.Bases.EntComponentComponent
+@inherits Enter.Ui.Bases.EntBaseComponent
 
 <CascadingValue Value="this" IsFixed="true">
     <li @attributes="@AdditionalAttributes" class="@ClassNames" @onclick="Select" @onclick:stopPropagation>
