--- a/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
@@ -1,7 +1,7 @@
 ﻿
 :root {
   --ent-drawer-width: 20rem;
-  --ent-drawer-z-index: var(--ent-z-index-tertiary);
+  --ent-drawer-z-index: var(--ent-z-index-5);
   --ent-drawer-bg: var(--ent-bg-base);
   --ent-drawer-box-shadow: 0px 1px 9px -3px rgba(0, 0, 0, 0.05);
   --ent-drawer-border-color: var(--ent-border-color);
@@ -20,9 +20,10 @@
     top: 0;
     transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
     background-color: var(--ent-drawer-bg);
-    z-index: 10;
+    z-index: var(--ent-drawer-z-index);
     box-shadow: var(--ent-drawer-box-shadow);
 
+ 
     &.ent-drawer--direction-start {
 
       border-inline-end: var(--ent-drawer-border-width) var(--ent-drawer-border-style) var(--ent-drawer-border-color);
@@ -113,3 +114,8 @@
 
 
 }
+
+.ent-drawer-overlay {
+  z-index: calc(var(--ent-drawer-z-index) - 1);
+}
+    
