--- a/Source/Enter.Ui/Styles/components/_ent_modal.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_modal.component.scss
@@ -12,7 +12,7 @@
 }
 
 .ent-modal-provider {
-  z-index: var(--ent-z-index-secondary);
+  z-index: var(--ent-z-index-8);
 }
 
 .ent-modal-container {
