fix render performance on tab and them provider

--- a/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
+++ b/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
@@ -34,6 +34,11 @@
         return base.OnParametersSetAsync();
     }
 
+    protected override void OnAfterRender(bool firstRender)
+    {
+        Console.WriteLine($"{nameof(EntDrawer)} rendred");
+        base.OnAfterRender(firstRender);
+    }
 
     [Parameter]
     public EntDrawerDirection Direction { get; set; } = EntDrawerDirection.Start;
