--- a/Source/Enter.Ui/Components/Drawer/EntDrawerContainer.razor
+++ b/Source/Enter.Ui/Components/Drawer/EntDrawerContainer.razor
@@ -17,6 +17,12 @@
         base.BuildClasses(builder);
     }
 
+    protected override void OnAfterRender(bool firstRender)
+    {
+        Console.WriteLine($"{nameof(EntDrawerContainer)} rendred");
+        base.OnAfterRender(firstRender);
+    }
+
 
     private bool HasBackdrop { get; set; } = false;
 
