--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -7,6 +7,7 @@
            @ref="MdiTab"
            KeepPanelAlive="true"
            PanelClass="h-full"
+           HasBackdrop
            ActiveClass=""
            Closeable
            class="border-0 "
