--- a/Source/Enter.Ui/Components/Tabs/EntTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntTab.razor
@@ -62,7 +62,7 @@
             </div>
             if (HasBackdrop)
             {
-                <EntOverlay Visible="_toggleMenu" DarkBackground="true" OnClick="@OnToggleMenu" @ontouchstart="@OnToggleMenu" class="ent-tab-overlay" LockScroll="false"/>
+                <EntOverlay Visible="_toggleMenu" DarkBackground="true" OnClick="@OnToggleMenu"  class="ent-tab-overlay" LockScroll="false"/>
             }
         }
         else
