--- a/Source/Enter.Ui/Styles/components/_ent_overlay.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_overlay.component.scss
@@ -9,9 +9,9 @@
   border-radius: inherit;
   display: flex;
   position: fixed;
-  transition: .3s cubic-bezier(.25, .8, .5, 1), z-index 1ms;
   z-index: var(--ent-z-index-emphasis);
-
+  transition: var(--ent-transition-all);
+  
   &.ent-overlay-absolute {
     position: absolute;
   }
@@ -31,13 +31,14 @@
     -webkit-animation: ent-animation-fadein ease 0.15s;
     -moz-animation: ent-animation-fadein ease 0.15s;
     -o-animation: ent-animation-fadein ease 0.15s;
-
+    transition: var(--ent-transition-all);
     &.ent-overlay-dark {
-      background-color: var(--ent-bg-body-backdrop-sm);
+      background-color: var(--ent-bg-body-backdrop);
     }
 
     &.ent-overlay-light {
-      background-color: var(--ent-bg-body-backdrop-sm);
+      background-color: var(--ent-bg-body-backdrop);
+      transition: var(--ent-transition-all);
     }
 
     &:hover {
