--- a/Source/Enter.Ui/Styles/components/_ent_treeview.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_treeview.component.scss
@@ -13,9 +13,13 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-
+    
+    &:hover {
+      background-color: var(--ent-bg-neutral-highlight);
+    }
+    
     &.active {
-      background-color: var(--ent-light-emphasis);
+      background-color: var(--ent-bg-neutral-select);
     }
 
     &.expanded {
