--- a/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
@@ -1,54 +1,75 @@
 ﻿@page "/documents/treeview"
-@using Enter.Ui.Core
-@using Enter.Ui.Components.Icon
-@using Enter.Ui.Components.TreeView
-@using Enter.Ui.Components.Button
-@using Enter.Ui.Cores.Core
 @using Enter.Ui.Cores.Extensions
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Components.Icon
+@using Enter.Ui.Components.Button
 @layout DocumentLayout
 <div class="p-4">
 
     <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="TreeView (Single Select)">
         <CardBody>
-            <EntTreeView
-                Tag="SingleTreeView"
-                class="mb-4"
-                MultiSelect="false"
-                SelectMode="EntTreeViewSelectMode.Toggle"
-                DataSource="@Datasource"
-                @bind-SelectedValue="TreeSelectedValue"/>
-
-            @if (TreeSelectedValue != null)
-            {
-                <EntButton Size="ButtonSize.Small" class="" @onclick="@(() => { TreeSelectedValue = "Normal Backend Developer"; })">
-                    @TreeSelectedValue
-                </EntButton>
-            }
-
+            <EntInputGroup TValue="bool" Label="IsMultiSelect">
+                <InputCheckbox @bind-Value="IsMultiSelect"></InputCheckbox>
+            </EntInputGroup>
+            <EntInputGroup TValue="bool" Label="AutoParentSelect">
+                <InputCheckbox @bind-Value="AutoParentSelect"></InputCheckbox>
+            </EntInputGroup>
+             <EntInputGroup TValue="bool" Label="AutoChildSelect">
+                            <InputCheckbox @bind-Value="AutoChildSelect"></InputCheckbox>
+                        </EntInputGroup>
+            <EntInputGroup TValue="bool" Label="AutoExpand">
+                <InputCheckbox @bind-Value="AutoExpand"></InputCheckbox>
+            </EntInputGroup>
         </CardBody>
     </EntCard>
 
     <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="TreeView (Multi Select)">
         <CardBody>
             <EntTreeView
+                Tag="@("MultiSelect TreeView")"
                 class="mb-4"
-                MultiSelect="true"
+                MultiSelect="@IsMultiSelect"
+                AutoParentSelect="@AutoParentSelect"
+                AutoChildSelect="@AutoChildSelect"
+                AutoExpand="@AutoExpand"
                 DataSource="@Datasource"
+                @bind-SelectedValue="TreeSelectedValue"
                 @bind-SelectedValues="TreeSelectedValues"/>
-            <EntFlex Gap="1">
-                @foreach (var item in TreeSelectedValues)
-                {
-                    <EntButton Size="ButtonSize.Small">
-                        @item
-                    </EntButton>
-                }
-            </EntFlex>
+            
+            @if (IsMultiSelect)
+            {
+                <b class="mb-4">Selected Values:</b>
+                <EntFlex Gap="1">
+                    @foreach (var item in TreeSelectedValues)
+                    {
+                        <EntButton Size="ButtonSize.Small">
+                            @item
+                        </EntButton>
+                    }
+                </EntFlex>
+            }
+            else
+            {
+                <b class="mb-4">Selected Value:</b>
+                <EntFlex Gap="1">
+                    
+                        <EntButton Size="ButtonSize.Small">
+                            @TreeSelectedValue
+                        </EntButton>
+                    
+                </EntFlex>
+            }
         </CardBody>
     </EntCard>
 
 </div>
 
 @code {
+
+    public bool IsMultiSelect { get; set; } = false;
+    public bool AutoParentSelect { get; set; } = false;
+    public bool AutoChildSelect { get; set; } = false;
+    public bool AutoExpand { get; set; } = false;
 
     public IEnumerable<EntSelectItem<string>> Datasource = Constants.Roles.ProjectToSelectItem(x => x.Text, x => x.Value, x => x.Childrens, EntIconName.Folder);
 
