fix nav menu style and bugs update to version 1.0.91-review-3

--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
@@ -11,6 +11,6 @@
         <EntIcon class="ent-nav-menu-group-item-arrow-icon" Icon="@EntIconName.ChevronDown"/>
     </div>
 
-    <EntExpandable @bind-Expanded="IsShow" class="@ContainerCss">@ChildContent</EntExpandable>
+    <EntExpandable @bind-Expanded="IsShow" class="@ContainerClassNames">@ChildContent</EntExpandable>
 
 </div>
